# AIGrow

./: Cargo.toml  README.md  SPEC.md  hello_world.aig
src/: buffer.rs  lib.rs  main.rs
src/aigrow/: functions.rs  types.rs
src/buffer/: execute.rs  modify.rs
src/compiler/: ast.rs  codegen.rs  lexer.rs  optimizer.rs  parser.rs
src/compiler/lexer/: lexer.rs
src/compiler/parser/: parser.rs
src/main/: execute_and_modify.rs
tests/: aigrow_tests.rs  lexer_tests.rs
tests/test_files/: example_program.aig
