[package]
name = "aig_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.1"
num-bigint = "0.4"
num-traits = "0.2"
yaml-rust = "0.4.5"


[lib]
name = "aig_compiler"
path = "src/lib.rs"
